<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBussines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="64dp" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tvNombre"
        app:layout_constraintStart_toStartOf="@+id/guidelineBussines"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/guidelineBussines"
        app:layout_constraintTop_toBottomOf="@+id/tvNombre" />

    <TextView
        android:id="@+id/tvCodigoPostal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tvCodigoPostal"
        app:layout_constraintStart_toStartOf="@+id/guidelineBussines"
        app:layout_constraintTop_toBottomOf="@+id/edNombre" />

    <EditText
        android:id="@+id/edRepresentante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/guidelineBussines"
        app:layout_constraintTop_toBottomOf="@+id/tvCodigoPostal" />

    <TextView
        android:id="@+id/tvOcupacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tvOcupacion"
        app:layout_constraintStart_toStartOf="@+id/guidelineBussines"
        app:layout_constraintTop_toBottomOf="@+id/edRepresentante" />

    <Spinner
        android:id="@+id/spNumEmp"
        android:layout_width="0dp"
        android:entries="@array/ocupacion"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/edRepresentante"
        app:layout_constraintStart_toStartOf="@+id/guidelineBussines"
        app:layout_constraintTop_toBottomOf="@+id/tvOcupacion" />

</androidx.constraintlayout.widget.ConstraintLayout>